...

        <TextView
            style="@style/TextAppearance.Ticket.ScreenTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/element_gap"
            android:text="@string/my_reservations" />

        <TextView
            style="@style/TextAppearance.Ticket.ScreenSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
...
